emumaster (0.0.2) unstable; urgency=low

  * added psx emulation
  * added snes emulation
  * added gba emulation
  * added page to select the console
  * states are compressed now
  * settings look refreshed
  * button to remove rom
  * asynchronous audio
  * redesigned architecture to speed up things
  * optional button to exit in top left corner
  * fixed bug in pad: when you touch on edge pad didn't work
  * fixed crash on pause button
  * fix: start button of the pad placed in the right position
  * fixed ram amount in the nes disk info
  * render method for nes ppu can now be selected
  * nes game genie codes enable/disable fix
  * nes mappers:
     added: 200,201,202,222,225,226,227,228,229,230,231,232,233,235,236,240,241,242,243,244,246,251,252,254,255
     fixed: 2
  * settings are saved now

 -- elemental <mar.kazmierczak@gmail.com>  Wed, 01 Sep 2011 10:02:09 +0200

emumaster (0.0.2) unstable; urgency=low

  * Initial Release.

 -- elemental <mar.kazmierczak@gmail.com>  Wed, 24 Aug 2011 19:02:09 +0200